--- a/JustRain/index.html
+++ b/JustRain/index.html
@@ -7,7 +7,8 @@
         <style>
             body {
                 margin: 0;
-                
+                overflow-x:hidden;
+                overflow-y:hidden;
             }
         </style>
     </head>
